lavender: defconfig: Regenerate

--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -50,7 +50,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Monkey"
+CONFIG_LOCALVERSION="-Monkey~EAS"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -545,7 +545,7 @@ CONFIG_PM=y
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
@@ -664,7 +664,11 @@ CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
 # CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
+# CONFIG_TCP_CONG_BIC is not set
+CONFIG_TCP_CONG_WESTWOOD=y
+# CONFIG_TCP_CONG_HTCP is not set
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -2347,7 +2351,7 @@ CONFIG_QPNP_FG_GEN3=y
 # CONFIG_SMB1351_USB_CHARGER is not set
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
-CONFIG_BATTERY_BCL=y
+# CONFIG_BATTERY_BCL is not set
 CONFIG_QPNP_SMB2=y
 CONFIG_SMB138X_CHARGER=y
 CONFIG_QPNP_QNOVO=y
@@ -4054,8 +4058,6 @@ CONFIG_ION_MSM=y
 #
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCACLD_WLAN_LFR3=y
-CONFIG_WLAN_FEATURE_FILS=y
-# CONFIG_PRIMA_WLAN_OKC is not set
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_WLAN_FEATURE_LPSS=y
@@ -4081,12 +4083,15 @@ CONFIG_LFR_SUBNET_DETECTION=y
 CONFIG_MCC_TO_SCC_SWITCH=y
 CONFIG_QCACLD_WLAN_LFR2=y
 CONFIG_WLAN_FEATURE_DISA=y
-# CONFIG_WLAN_SPECTRAL_SCAN is not set
+# CONFIG_WLAN_FEATURE_OWE is not set
+# CONFIG_WLAN_FEATURE_GMAC is not set
+# CONFIG_WLAN_FEATURE_SAE is not set
 CONFIG_ICMP_DISABLE_PS=y
 # CONFIG_BUILD_TIMESTAMP is not set
 CONFIG_WLAN_FEATURE_SARV1_TO_SARV2=y
-# CONFIG_QCA_CLD_DEBUG is not set
+CONFIG_WLAN_FEATURE_FILS=y
 CONFIG_WLAN_FEATURE_PKT_CAPTURE=y
+# CONFIG_QCA_CLD_DEBUG is not set
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
@@ -4831,6 +4836,7 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_FILE_TABLE_DEBUG is not set
+CONFIG_BLOCK_UNWANTED_FILES=y
 # CONFIG_VIRTUALIZATION is not set
 
 #
